<resources>
    <string name="module_app_name">hs tracker</string>
    <string name="module_set_permissions">set permissions</string>
    <string name="module_permissions_step_1">1,open write external storage permission</string>
    <string name="module_permissions_step_2">2,allow access data dir</string>
    <string name="module_permissions_step_3">3,allow manage external storage</string>
    <string name="module_next">next</string>
    <string name="module_permissions_step_4">4,write config file</string>
    <string name="module_loading">loading</string>
    <string name="module_sync_card_data">Sync Card Data</string>
    <string name="module_version_code">Version Code</string>
    <string name="module_default_version">133122</string>
    <string name="module_chinese">Chinese</string>
    <string name="module_english">English</string>
    <string name="module_sync">sync</string>
    <string name="module_syncing">syncing</string>
    <string name="module_code">code</string>
    <string name="module_default_deck_code">AAECAaoIBJzOA6beA8L2A9ySBA3buAPhzAPNzgPw1AOK5APq5wP67APk9gOF+gOogQSVkgT5nwT6nwQA</string>
    <string name="module_start">start</string>
    <string name="module_test">test</string>
    <string name="module_settings">Settings</string>
    <string name="module_deck">deck</string>
    <string name="module_graveyard">graveyard</string>
    <string name="module_opponent_graveyard">opponent graveyard</string>
    <string name="module_filter">filter</string>
    <string name="module_class">class</string>
    <string name="module_demon_hunter">Demon Hunter</string>
    <string name="module_druid">Druid</string>
    <string name="module_hunter">Hunter</string>
    <string name="module_mage">Mage</string>
    <string name="module_paladin">Paladin</string>
    <string name="module_priest">Priest</string>
    <string name="module_rogue">Rogue</string>
    <string name="module_shaman">Shaman</string>
    <string name="module_warlock">Warlock</string>
    <string name="module_warrior">Warrior</string>
    <string name="module_neutral">Neutral</string>
    <string name="module_death_knight">Death Knight</string>
    <string name="module_dream">Dream</string>
    <string name="module_whizbang">Whizbang</string>
    <string name="module_rarity_free">Free</string>
    <string name="module_rarity_common">Common</string>
    <string name="module_rarity_rare">Rare</string>
    <string name="module_rarity_epic">Epic</string>
    <string name="module_rarity_legendary">Legendary</string>
    <string name="module_rarity">Rarity</string>
    <string name="module_card_data_source">Source from:https://hearthstonejson.com</string>
    <string name="module_hint">Hint</string>
    <string name="module_sync_success">Sync success</string>
    <string name="module_done">Done</string>
    <string name="module_author_email">913918146@qq.com</string>
    <string name="module_contact_author">Contact Author</string>
    <string name="module_language">Language</string>
    <string name="module_theme">Theme</string>
    <string name="module_theme_light">Light</string>
    <string name="module_theme_dark">Dark</string>
    <string name="module_theme_follow_system">Follow System</string>
    <string name="module_code_parser">Deck Code Parser</string>
    <string name="module_diagnose">Diagnose</string>
    <string name="module_check_config_file">Check Config File</string>
    <string name="module_write_config_file">Write Config File</string>
    <string name="module_write_in">Write In</string>
    <string name="module_force_write">Force Write</string>
    <string name="module_hint_write_config">In order to read the log, we will write the contents to the log.config file in the Hearthstone directory</string>
    <string name="module_write_config_failed">Write Config Failed</string>
    <string name="module_rewrite_config_file">Rewrite Config File</string>
    <string name="module_self">Self</string>
    <string name="module_opponent">Opponent</string>
    <string name="module_race">Race</string>
    <string name="module_minion">Minion</string>
    <string name="module_spell">Spell</string>
    <string name="module_weapon">Weapon</string>
    <string name="module_hero">Hero</string>
    <string name="module_mechanics">Mechanics</string>
    <string name="module_pirate">Pirate</string>
    <string name="module_mechanical">Mechanical</string>
    <string name="module_dragon">Dragon</string>
    <string name="module_beast">Beast</string>
    <string name="module_murloc">Murloc</string>
    <string name="module_demon">Demon</string>
    <string name="module_totem">Totem</string>
    <string name="module_elemental">Elemental</string>
    <string name="module_quilboar">Quilboar</string>
    <string name="module_all">All</string>
    <string name="module_arcane">Arcane</string>
    <string name="module_frost">Frost</string>
    <string name="module_fire">Fire</string>
    <string name="module_nature">Nature</string>
    <string name="module_shadow">Shadow</string>
    <string name="module_holy">Holy</string>
    <string name="module_Fel">Fel</string>
    <string name="module_version_code_helper_text">No input means to get the latest</string>
    <string name="module_records">Records</string>
    <string name="module_win">Win</string>
    <string name="module_loss">Loss</string>

    <string name="module_unknown">Unknown</string>
    <string name="module_standard">Standard</string>
    <string name="module_wild">Wild</string>
    <string name="module_classic">Classic</string>
    <string name="module_ranked">Ranked</string>
    <string name="module_casual">Casual</string>
    <string name="module_previous">Previous</string>
    <string name="module_slider_mode">Slider Mode</string>
    <string name="module_list_mode">List Mode</string>

    <string name="module_save_log_file">Save Log File</string>
    <string name="module_card_list">Card List</string>
    <string name="module_naga">Naga</string>
    <string name="module_summary">Summary</string>
    <string name="module_by_class">By Class</string>
    <string name="module_by_deck">By Deck</string>
    <string name="module_view_all_games">View All Games</string>
    <string name="module_data_transfer">Migrate Data</string>
    <string name="module_title_migrate_date_to_another_phone">Migrate data to another phone</string>
    <string name="module_title_migrate_data_to_this_phone">Migrate data from another phone to this phone</string>
    <string name="module_receive">Receive</string>
    <string name="module_port">Port</string>
    <string name="module_pie_chart">Pie Chart</string>
    <string name="module_all_win_rate">Overall Win Rate</string>
    <string name="module_first_hand_rate">First Hand Rate</string>
    <string name="module_first_hand_percent">First Hand Percent</string>
    <string name="module_second_hand_rate">Second Hand Rate</string>
    <string name="module_class_distribution">Class Distribution</string>
    <string name="module_first_hand">First Hand</string>
    <string name="module_second_hand">Second Hand</string>
    <string name="module_class_battle_detail">Class Battle Detail</string>
    <string name="module_opponent_class">Opponent Class</string>
    <string name="module_times">Times</string>
    <string name="module_win_rate">Win Rate</string>
    <string name="module_deck_battle_detail">Deck Battle Detail</string>
    <string name="module_cost">Cost</string>
    <string name="module_attack">Attack</string>
    <string name="module_record">Records</string>
    <string name="module_deck_detail">Deck Detail</string>
    <string name="module_opponent_hand_card">Opponent hand card</string>
    <string name="module_tracker_style">Tracker Style</string>

    <string name="module_small_window">Small Window</string>
    <string name="module_floating_window">Floating Window</string>
    <string name="module_floating_track">Floating Window</string>
    <string name="module_github_address">https://github.com/keluokeda/hs_tracker</string>
    <string name="module_support">Support</string>
</resources>