<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sync.SyncCardDataActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/module_sync_card_data"
            app:titleTextColor="@color/module_white" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/link"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/module_card_data_source"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/module_version_code"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/link">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/module_default_version" />

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_version">

        <RadioButton
            android:id="@+id/chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/module_chinese" />

        <RadioButton
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_english" />
    </RadioGroup>

    <Button
        android:id="@+id/sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/module_sync"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>