<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.theme.ThemeActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/module_baseline_arrow_back_white_24dp"
            app:title="@string/module_theme"
            app:titleTextColor="@color/module_white" />
    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_theme_follow_system"/>
        <RadioButton
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_theme_light"/>

        <RadioButton
            android:id="@+id/dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_theme_dark"/>
    </RadioGroup>

</LinearLayout>