<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.permissions.PermissionsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/module_set_permissions"
            app:titleTextColor="@color/module_white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/step1"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/module_permissions_step_1"
        app:drawableEndCompat="@drawable/module_baseline_done_green_500_24dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc" />

    <TextView
        android:id="@+id/step2"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/module_permissions_step_2"
        app:drawableEndCompat="@drawable/module_baseline_done_green_500_24dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc" />

    <TextView
        android:id="@+id/step3"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/module_permissions_step_3"
        app:drawableEndCompat="@drawable/module_baseline_done_green_500_24dp" />


    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/module_next" />

</LinearLayout>