<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/module_baseline_arrow_back_white_24dp"
            app:title="@string/module_settings"
            app:titleTextColor="@color/module_white" />
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/theme"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="16dp"
        android:text="@string/module_theme"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/module_divider"
        app:layout_constraintTop_toBottomOf="@id/test" />
    <TextView
        android:id="@+id/test"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="16dp"
        android:text="@string/module_test"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="@color/module_divider"
        app:layout_constraintTop_toBottomOf="@id/test" />

    <TextView
        android:id="@+id/language"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?selectableItemBackground"
        android:padding="16dp"
        android:visibility="gone"
        android:text="@string/module_language"
        app:layout_constraintTop_toBottomOf="@id/test" />


    <TextView
        android:id="@+id/sync"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?selectableItemBackground"
        android:padding="16dp"
        android:text="@string/module_sync_card_data"
        app:layout_constraintTop_toBottomOf="@id/test" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/module_divider"
        app:layout_constraintTop_toBottomOf="@id/sync" />

    <TextView
        android:id="@+id/code_parser"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?selectableItemBackground"
        android:padding="16dp"
        android:text="@string/module_code_parser"
        app:layout_constraintTop_toBottomOf="@id/test" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/module_divider"
        app:layout_constraintTop_toBottomOf="@id/sync" />

    <LinearLayout
        android:id="@+id/ll_contact_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?selectableItemBackground"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/contact_author"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_contact_author"
            app:layout_constraintTop_toBottomOf="@id/sync" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_author_email" />

    </LinearLayout>
</LinearLayout>