<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/module_cost" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/cost_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/module_chart_height" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/module_attack" />


        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/attack_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/module_chart_height" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/module_mechanics" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/mechanics_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/module_race" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/race_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/module_spell" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/spell_school_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>